[package]
name = "managed-lhapdf"
version = "0.3.3"
authors = ["Christopher Schwan <handgranaten-herbert@posteo.de>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/cschwan/managed-lhapdf"
readme = "README.md"
keywords = ["high-energy-physics", "physics"]
categories = ["science"]
description = "(Unofficial) Rust bindings for the LHAPDF C++ library"
rust-version = "1.70.0"

[dependencies]
anyhow = "1.0.79"
cxx = "1.0.65"
dirs = { optional = true, version = "5.0.1" }
flate2 = { optional = true, version = "1.0.22" }
fs2 = { optional = true, version = "0.4.3" }
reqwest = { default-features = false, features = ["blocking", "rustls-tls"], optional = true, version = "0.12.2" }
serde = { features = ["derive"], version = "1.0.130" }
tar = { optional = true, version = "0.4.38" }
thiserror = "1.0.30"
toml = { features = ["display", "parse"], optional = true, version = "0.8.12" }

[build-dependencies]
cxx-build = "1.0.107"
pkg-config = "0.3"

[features]
default = ["managed"]
docs-only = []
managed = ["dep:dirs", "dep:flate2", "dep:fs2", "dep:reqwest", "dep:tar", "dep:toml"]
static = []

[package.metadata.docs.rs]
features = [ "docs-only" ]
