[package]
name = "managed-lhapdf"
version = "0.4.2"
authors = ["Christopher Schwan <handgranaten-herbert@posteo.de>"]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/cschwan/managed-lhapdf"
readme = "README.md"
keywords = ["high-energy-physics", "physics"]
categories = ["science"]
description = "(Unofficial) Rust bindings for the LHAPDF C++ library"
rust-version = "1.91.0"

[dependencies]
anyhow = "1.0.79"
cxx = "1.0.130"
dirs = { optional = true, version = "5.0.1" }
flate2 = { optional = true, version = "1.0.22" }
ureq = { version = "2.10.1", optional = true }
serde = { features = ["derive"], version = "1.0.130" }
tar = { default-features = false, optional = true, version = "0.4.38" }
thiserror = "1.0.30"
toml = { features = ["display", "parse"], optional = true, version = "0.8.12" }
url = { features = ["serde"], optional = true, version = "2.5.2" }

[build-dependencies]
cxx-build = "1.0.130"
pkg-config = "0.3"

[features]
default = ["managed"]
docs-only = []
managed = ["dep:dirs", "dep:flate2", "dep:tar", "dep:toml", "dep:ureq", "dep:url"]
static = []

[package.metadata.docs.rs]
features = [ "docs-only" ]
